Arrow functions and Ternary Operator Done.

--- a/Day-02-Arrays/index.html
+++ b/Day-02-Arrays/index.html
@@ -6,6 +6,6 @@
     <title>map_drills</title>
 </head>
 <body>
-    <script src="chaining.js"></script>
+    <script src="arrow functions.js"></script>
 </body>
 </html>
