feat(day-03): master Destructuring, Spread/Rest operators & Immutability patterns

--- a/Day 03 destructuring,spread operator,rest operator/index.html
+++ b/Day 03 destructuring,spread operator,rest operator/index.html
@@ -6,6 +6,6 @@
     <title>destructuring</title>
 </head>
 <body>
-    <script src="nested destructuring.js"></script>
+    <script src="Code war.js"></script>
 </body>
 </html>
